# aws-ssm-parameter

./: .pdm-python  README.md  action.yml  pyproject.toml  ssm-parameter.py
.github/: CODEOWNERS
